# agenda-rs

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
src/application/: Cargo.toml
src/application/src/: main.rs
src/db/: Cargo.toml
src/db/src/: lib.rs  pool.rs
src/db/src/todo/: mod.rs  repo.rs
src/domain/: Cargo.toml
src/domain/src/: errors.rs  lib.rs
src/domain/src/todos/: mod.rs  models.rs  repo.rs
src/domain/tests/: todo.rs  todo_0_memory.rs  todo_1_db.rs
src/memory/: Cargo.toml
src/memory/src/: lib.rs  todo.rs
src/strucsty/: Cargo.toml
src/strucsty/src/: lib.rs  todo.rs
src/web/: Cargo.toml
src/web/src/: context.rs  error.rs  lib.rs  proxy.rs  rest.rs  schema.rs  types.rs  utils.rs
src/web/tests/: query.rs  todo.rs
