[package]
name = "agenda-app"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-actix-web="0.4.0-beta.4"
tokio = {version="1", features=["full"]}
agenda-web = {path ="../web"}
actix-web = "4.0.0-beta.5"
tracing = "0.1"
tracing-subscriber = "0.2"
dotenv = "0.15.0"
