[package]
name = "agenda-domain"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.49"
tokio = { version = "0.2", features= ["full"]}
derive_builder = "0.10.0"

[dev-dependencies]
fake = "2.4"
rand = "0.8"
agenda-memory = { path= "../memory" }
agenda-db = { path= "../db" }

