[package]
name = "agenda-web"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
async-graphql-actix-web= "2"
async-graphql = { version = "2.8", features= ["uuid","chrono"] }
serde_json = "1"
serde = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4" }
derive_builder = "0.10.0"
agenda-domain= { path="../domain"}
agenda-db= { path="../db"}
tracing = "0.1"


[dev-dependencies]
actix-rt = "1"
actix-http = "2"