[package]
name = "agenda-web"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@prima.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
async-graphql = { version = "2.8", features= ["uuid","chrono"] }
serde_json = "1"
serde = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4" }
derive_builder = "0.10.0"
agenda-domain= { path="../domain"}
agenda-db= { path="../db"}
agenda-memory= { path="../memory"}
agenda-strucsty= { path="../strucsty"}
tracing = "0.1"
reqwest ={ version= "0.11.3", features =["json"]}
opentelemetry = { version = "0.13"  }
tracing-opentelemetry = { version = "0.12"  }
opentelemetry-jaeger = "0.12"
tracing-subscriber = "0.2.17"
log="0.4"
env_logger="0.8"
tracing-actix-web = "0.4.0-beta.4"
anyhow="1"

[dev-dependencies]
actix-rt = "2"
